--- a/.github/workflows/figma-tokens-push.yaml
+++ b/.github/workflows/figma-tokens-push.yaml
@@ -24,45 +24,53 @@ jobs:
       - name: Run style-dictionary
         run: echo "style-dictionary running"
 
-  pull-request:
-    runs-on: ubuntu-latest
-    needs: convert-sd
-    steps:
-      # - name: skip process
-      #   run: |
-      #     echo "skipped"
-
-      - name: Check Branch Name
-        run: |
-          if [[ $GITHUB_REF != "refs/heads/figma-tokens" ]]; then
-            echo "Not pushing to figma-tokens branch, skipping the workflow."
-            exit 0
-          fi
-
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v3
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v9
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: main # Branch tujuan pull request
-          title: 'Figma Tokens Update'
-          body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
+          author_name: Example
+          author_email: example@gmail.com
+          message: 'chore: style-dictionary output'
+          add: '.'
 
-        # uses: repo-sync/pull-request@v2
-        # with:
-        #   destination_branch: 'main' # match your default branch
-        #   pr_title: 'Figma Tokens Update'
-        #   pr_body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
-        #   github_token: ${{ secrets.GITHUB_TOKEN }}
+  # pull-request:
+  #   runs-on: ubuntu-latest
+  #   needs: convert-sd
+  #   steps:
+  #     # - name: skip process
+  #     #   run: |
+  #     #     echo "skipped"
 
-      # - uses: actions/checkout@v2
+  #     - name: Check Branch Name
+  #       run: |
+  #         if [[ $GITHUB_REF != "refs/heads/figma-tokens" ]]; then
+  #           echo "Not pushing to figma-tokens branch, skipping the workflow."
+  #           exit 0
+  #         fi
 
-      # - name: Create Pull Request
-      #   uses: repo-sync/pull-request@v2
-      #   with:
-      #     destination_branch: 'main' # match your default branch
-      #     pr_title: 'Figma Tokens Update'
-      #     pr_body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+  #     - name: Checkout code
+  #       uses: actions/checkout@v2
+
+  #     - name: Create Pull Request
+  #       uses: peter-evans/create-pull-request@v3
+  #       with:
+  #         token: ${{ secrets.GITHUB_TOKEN }}
+  #         branch: main # Branch tujuan pull request
+  #         title: 'Figma Tokens Update'
+  #         body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
+
+  # uses: repo-sync/pull-request@v2
+  # with:
+  #   destination_branch: 'main' # match your default branch
+  #   pr_title: 'Figma Tokens Update'
+  #   pr_body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
+  #   github_token: ${{ secrets.GITHUB_TOKEN }}
+
+  # - uses: actions/checkout@v2
+
+  # - name: Create Pull Request
+  #   uses: repo-sync/pull-request@v2
+  #   with:
+  #     destination_branch: 'main' # match your default branch
+  #     pr_title: 'Figma Tokens Update'
+  #     pr_body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
+  #     github_token: ${{ secrets.GITHUB_TOKEN }}
