--- a/.github/workflows/figma-tokens-push.yaml
+++ b/.github/workflows/figma-tokens-push.yaml
@@ -36,27 +36,27 @@ jobs:
     runs-on: ubuntu-latest
     needs: convert-sd
     steps:
-      - name: skip process
-        run: |
-          echo "skipped"
+      # - name: skip process
+      #   run: |
+      #     echo "skipped"
 
-  #     - name: Check Branch Name
-  #       run: |
-  #         if [[ $GITHUB_REF != "refs/heads/figma-tokens" ]]; then
-  #           echo "Not pushing to figma-tokens branch, skipping the workflow."
-  #           exit 0
-  #         fi
+      #     - name: Check Branch Name
+      #       run: |
+      #         if [[ $GITHUB_REF != "refs/heads/figma-tokens" ]]; then
+      #           echo "Not pushing to figma-tokens branch, skipping the workflow."
+      #           exit 0
+      #         fi
 
-  #     - name: Checkout code
-  #       uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-  #     - name: Create Pull Request
-  #       uses: peter-evans/create-pull-request@v3
-  #       with:
-  #         token: ${{ secrets.GITHUB_TOKEN }}
-  #         branch: main # Branch tujuan pull request
-  #         title: 'Figma Tokens Update'
-  #         body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: main # Branch tujuan pull request
+          title: 'Figma Tokens Update'
+          body: '🍥 Design Tokens were updated in Figma! This PR was created to update the code.'
 
   # uses: repo-sync/pull-request@v2
   # with:
