--- a/.github/workflows/figma-tokens-push.yaml
+++ b/.github/workflows/figma-tokens-push.yaml
@@ -7,34 +7,34 @@ on:
       - figma-tokens
 
 jobs:
-  convert-sd:
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-      - uses: actions/checkout@master
-        with:
-          repository: ${{ github.event.pull_request.head.repo.full_name }}
-          ref: ${{ github.event.pull_request.head.ref }}
-      - name: Install Dependencies
-        run: npm install
+  # convert-sd:
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 5
+  #   steps:
+  #     - uses: actions/checkout@master
+  #       with:
+  #         repository: ${{ github.event.pull_request.head.repo.full_name }}
+  #         ref: ${{ github.event.pull_request.head.ref }}
+  #     - name: Install Dependencies
+  #       run: npm install
 
-      - name: Run token-transformer
-        run: npx token-transformer sd-input/src/figma-tokens-output.json sd-input/src/sd-input.json global,colors,size,font global --resolveReferences true --expandTypography=true
+  #     - name: Run token-transformer
+  #       run: npx token-transformer sd-input/src/figma-tokens-output.json sd-input/src/sd-input.json global,colors,size,font global --resolveReferences true --expandTypography=true
 
-      - name: Run style-dictionary
-        run: npx style-dictionary build --config sd.config.cjs
+  #     - name: Run style-dictionary
+  #       run: npx style-dictionary build --config sd.config.cjs
 
-      - name: Commit changes
-        uses: EndBug/add-and-commit@v9
-        with:
-          author_name: senno adi
-          author_email: senno.adi2509@@gmail.com
-          message: 'chore: style-dictionary output'
-          add: '.'
+  #     - name: Commit changes
+  #       uses: EndBug/add-and-commit@v9
+  #       with:
+  #         author_name: senno adi
+  #         author_email: senno.adi2509@@gmail.com
+  #         message: 'chore: style-dictionary output'
+  #         add: '.'
 
   pull-request:
     runs-on: ubuntu-latest
-    needs: convert-sd
+    # needs: convert-sd
     steps:
       # - name: skip process
       #   run: |
