--- a/.github/workflows/Auto PR and Version Update.yaml
+++ b/.github/workflows/Auto PR and Version Update.yaml
@@ -37,13 +37,13 @@ jobs:
       - name: Run style-dictionary
         run: npx style-dictionary build --config sd.config.cjs
 
-    #   - name: Commit changes
-    #     uses: EndBug/add-and-commit@v9
-    #     with:
-    #       author_name: senno adi
-    #       author_email: senno.adi2509@@gmail.com
-    #       message: 'chore: style-dictionary output'
-    #       add: '.'
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v9
+        with:
+          author_name: senno adi
+          author_email: senno.adi2509@@gmail.com
+          message: 'chore: style-dictionary output'
+          add: '.'
 
   create-tag:
     needs: convert-sd
