--- a/.github/workflows/Auto PR and Version Update.yaml
+++ b/.github/workflows/Auto PR and Version Update.yaml
@@ -62,7 +62,7 @@ jobs:
         run: sudo apt-get install jq
 
       - name: Auto-increment Version Tag on Merge
-        if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
+        # if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
         run: |
           # Mendapatkan versi saat ini dari package.json
           current_version=$(jq -r .version package.json)
