--- a/.github/workflows/Auto PR and Version Update.yaml
+++ b/.github/workflows/Auto PR and Version Update.yaml
@@ -1,16 +1,4 @@
-name: Auto PR and Version Update
-
-# on:
-#   push:
-#     branches:
-#       - figma-tokens
-
-# on: pull_request
-
-# on:
-#   pull_request:
-#     branches:
-#       - main
+name: Auto Convert and Version Update
 
 on:
   workflow_run:
@@ -50,6 +38,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Pull latest changes from main
+        run: git pull origin main
+
       - name: Checkout Repository
         uses: actions/checkout@v2
 
@@ -62,7 +53,6 @@ jobs:
         run: sudo apt-get install jq
 
       - name: Auto-increment Version Tag on Merge
-        # if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
         run: |
           # Mendapatkan versi saat ini dari package.json
           current_version=$(jq -r .version package.json)
