--- a/.github/workflows/Auto PR and Version Update.yaml
+++ b/.github/workflows/Auto PR and Version Update.yaml
@@ -56,6 +56,7 @@ jobs:
         run: |
           # Mendapatkan versi saat ini dari package.json
           current_version=$(jq -r .version package.json)
+          echo "current version : $current_version"
 
           # Cek apakah versi ada atau tidak
           if [[ "$current_version" == "null" || -z "$current_version" ]]; then
@@ -63,80 +64,29 @@ jobs:
             exit 1
           fi
 
-          # Memisahkan versi menjadi array berdasarkan tanda titik (.)
-          IFS='.' read -ra version_parts <<< "$current_version"
+    #       # Memisahkan versi menjadi array berdasarkan tanda titik (.)
+    #       IFS='.' read -ra version_parts <<< "$current_version"
 
-          # Menambahkan 1 ke bagian terakhir (angka revisi) dari versi
-          new_revision=$((version_parts[2] + 1))
+    #       # Menambahkan 1 ke bagian terakhir (angka revisi) dari versi
+    #       new_revision=$((version_parts[2] + 1))
 
-          # Membuat versi yang baru dengan menggabungkan kembali array
-          new_version="${version_parts[0]}.${version_parts[1]}.$new_revision"
+    #       # Membuat versi yang baru dengan menggabungkan kembali array
+    #       new_version="${version_parts[0]}.${version_parts[1]}.$new_revision"
 
-          # Memperbarui versi dalam package.json
-          jq ".version = \"$new_version\"" package.json > package.json.tmp
-          mv package.json.tmp package.json
+    #       # Memperbarui versi dalam package.json
+    #       jq ".version = \"$new_version\"" package.json > package.json.tmp
+    #       mv package.json.tmp package.json
 
-          # Commit perubahan dan push ke branch main
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git add package.json
-          git commit -m "Auto-increment version to $new_version"
-          git push origin main
+    #       # Commit perubahan dan push ke branch main
+    #       git config user.name "GitHub Actions"
+    #       git config user.email "actions@github.com"
+    #       git add package.json
+    #       git commit -m "Auto-increment version to $new_version"
+    #       git push origin main
 
-          # Membuat tag baru dengan versi yang baru
-          git tag -a "v$new_version" -m "Versi $new_version"
-          git push origin "v$new_version"
-
-  continue-version:
-    needs: create-tag
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Set Up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14' # Ganti dengan versi Node.js yang sesuai
-
-      - name: Install jq
-        run: sudo apt-get install jq
-
-      - name: Get Latest Version Tag
-        run: |
-          latest_tag=$(git describe --tags --abbrev=0)
-          # Parsing versi dari tag
-          IFS='v' read -ra tag_parts <<< "$latest_tag"
-          current_version="${tag_parts[1]}"
-
-          # Memisahkan versi menjadi array berdasarkan tanda titik (.)
-          IFS='.' read -ra version_parts <<< "$current_version"
-
-          # Menambahkan 1 ke bagian terakhir (angka revisi) dari versi
-          new_revision=$((version_parts[2] + 1))
-
-          # Membuat versi yang baru dengan menggabungkan kembali array
-          new_version="${version_parts[0]}.${version_parts[1]}.$new_revision"
-          echo "::set-output name=new_version::$new_version"
-        id: version
-
-      - name: Continue Auto-increment Version Tag
-        run: |
-          new_version="${{ steps.version.outputs.new_version }}"
-          # Memperbarui versi dalam package.json
-          jq ".version = \"$new_version\"" package.json > package.json.tmp
-          mv package.json.tmp package.json
-
-          # Commit perubahan dan push ke branch main
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git add package.json
-          git commit -m "Auto-increment version to $new_version"
-          git push origin main
-
-          # Membuat tag baru dengan versi yang baru
-          git tag -a "v$new_version" -m "Versi $new_version"
-          git push origin "v$new_version"
+    #       # Membuat tag baru dengan versi yang baru
+    #       git tag -a "v$new_version" -m "Versi $new_version"
+    #       git push origin "v$new_version"
 
 #   main-branch-job:
 #     runs-on: ubuntu-latest
