--- a/.github/workflows/Auto PR and Version Update.yaml
+++ b/.github/workflows/Auto PR and Version Update.yaml
@@ -64,14 +64,15 @@ jobs:
             exit 1
           fi
 
-    #       # Memisahkan versi menjadi array berdasarkan tanda titik (.)
-    #       IFS='.' read -ra version_parts <<< "$current_version"
+          # Memisahkan versi menjadi array berdasarkan tanda titik (.)
+          IFS='.' read -ra version_parts <<< "$current_version"
 
-    #       # Menambahkan 1 ke bagian terakhir (angka revisi) dari versi
-    #       new_revision=$((version_parts[2] + 1))
+          # Menambahkan 1 ke bagian terakhir (angka revisi) dari versi
+          new_revision=$((version_parts[2] + 1))
 
-    #       # Membuat versi yang baru dengan menggabungkan kembali array
-    #       new_version="${version_parts[0]}.${version_parts[1]}.$new_revision"
+          # Membuat versi yang baru dengan menggabungkan kembali array
+          new_version="${version_parts[0]}.${version_parts[1]}.$new_revision"
+          echo "new version : $new_version"
 
     #       # Memperbarui versi dalam package.json
     #       jq ".version = \"$new_version\"" package.json > package.json.tmp
