--- a/.github/workflows/Auto PR and Version Update.yaml
+++ b/.github/workflows/Auto PR and Version Update.yaml
@@ -51,7 +51,6 @@ jobs:
 
       #   - name: Pull latest changes from main
       #     run: git pull origin main
-
       - name: Auto-increment Version Tag on Merge
         run: |
           # Mendapatkan versi saat ini dari package.json
@@ -78,16 +77,16 @@ jobs:
           jq ".version = \"$new_version\"" package.json > package.json.tmp
           mv package.json.tmp package.json
 
-          # Commit perubahan dan push ke branch main
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git add package.json
-          git commit -m "Auto-increment version to $new_version"
-          git push origin main
+        #   # Commit perubahan dan push ke branch main
+        #   git config user.name "GitHub Actions"
+        #   git config user.email "actions@github.com"
+        #   git add package.json
+        #   git commit -m "Auto-increment version to $new_version"
+        #   git push origin main
 
-          # Membuat tag baru dengan versi yang baru
-          git tag -a "v$new_version" -m "Versi $new_version"
-          git push origin "v$new_version"
+        #   # Membuat tag baru dengan versi yang baru
+        #   git tag -a "v$new_version" -m "Versi $new_version"
+        #   git push origin "v$new_version"
 
 #   main-branch-job:
 #     runs-on: ubuntu-latest
