--- a/.github/workflows/Auto PR and Version Update.yaml
+++ b/.github/workflows/Auto PR and Version Update.yaml
@@ -77,16 +77,19 @@ jobs:
           jq ".version = \"$new_version\"" package.json > package.json.tmp
           mv package.json.tmp package.json
 
-        #   # Commit perubahan dan push ke branch main
-        #   git config user.name "GitHub Actions"
-        #   git config user.email "actions@github.com"
-        #   git add package.json
-        #   git commit -m "Auto-increment version to $new_version"
-        #   git push origin main
+          # Melakukan git pull terlebih dahulu untuk mengambil perubahan terbaru dari remote 'main'
+          git pull origin main
 
-        #   # Membuat tag baru dengan versi yang baru
-        #   git tag -a "v$new_version" -m "Versi $new_version"
-        #   git push origin "v$new_version"
+          # Commit perubahan dan push ke branch main
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git add package.json
+          git commit -m "Auto-increment version to $new_version"
+          git push origin main
+
+          # Membuat tag baru dengan versi yang baru
+          git tag -a "v$new_version" -m "Versi $new_version"
+          git push origin "v$new_version"
 
 #   main-branch-job:
 #     runs-on: ubuntu-latest
