--- a/.github/workflows/Auto PR and Version Update.yaml
+++ b/.github/workflows/Auto PR and Version Update.yaml
@@ -80,6 +80,9 @@ jobs:
           # Melakukan git pull terlebih dahulu untuk mengambil perubahan terbaru dari remote 'main'
           git pull origin main
 
+          # Menghapus tag yang sudah ada di remote jika ada
+          # git push --delete origin "v$new_version" || true
+
           # Commit perubahan dan push ke branch main
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
