--- a/.github/workflows/Auto PR and Version Update.yaml
+++ b/.github/workflows/Auto PR and Version Update.yaml
@@ -26,12 +26,28 @@ jobs:
         run: npx style-dictionary build --config sd.config.cjs
 
       - name: Commit changes
-        uses: EndBug/add-and-commit@v9
+        run: |
+          git config --local user.email "senno.adi2509@gmail.com"
+          git config --local user.name "senno adi"
+          git add .
+          git commit -m "chore: style-dictionary output"
+          git push origin pr-branch
+
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v3
         with:
-          author_name: senno adi
-          author_email: senno.adi2509@@gmail.com
-          message: 'chore: style-dictionary output'
-          add: '.'
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: main
+          title: 'chore: style-dictionary output'
+          body: 'Automated PR to update style-dictionary output'
+
+    #   - name: Commit changes
+    #     uses: EndBug/add-and-commit@v9
+    #     with:
+    #       author_name: senno adi
+    #       author_email: senno.adi2509@@gmail.com
+    #       message: 'chore: style-dictionary output'
+    #       add: '.'
 #   create-tag:
 #     needs: convert-sd
 #     runs-on: ubuntu-latest
