--- a/.github/workflows/Auto PR and Version Update.yaml
+++ b/.github/workflows/Auto PR and Version Update.yaml
@@ -1,9 +1,17 @@
 name: Auto Convert and Version Update
 
-on:
-  push:
-    branches:
-      - dart-tokens
+on: pull_request
+
+jobs:
+  run_if: # only if base branch is "figma-tokens"
+    if: ${{ github.head_ref == 'figma-tokens' }}
+    name: Process Figma Tokens
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    steps:
+      - name: running flow
+        run: |
+          echo "flow running"
 
 # on:
 #   workflow_run:
@@ -12,61 +20,43 @@ on:
 #     types:
 #       - completed
 
-jobs:
-  convert-sd:
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-      #   - name: Checkout pull request branch
-      #     uses: actions/checkout@v2
-      #     with:
-      #       ref: ${{ github.event.workflow_run.head_branch }} # Menggunakan branch yang sesuai
-      #       repository: ${{ github.event.workflow_run.head_repository.full_name }}
+# jobs:
+#   convert-sd:
+#     runs-on: ubuntu-latest
+#     timeout-minutes: 5
+#     steps:
+#       - name: Install Dependencies
+#         run: npm install
 
-      #   - name: Chekout code
-      #     uses: actions/checkout@v2
+#       - name: Run token-transformer
+#         run: npx token-transformer sd-input/src/figma-tokens-output.json sd-input/src/sd-input.json global,colors,size,font global --resolveReferences true --expandTypography=true
 
-      #   - name: Chekout code
-      #     run: |
-      #       echo "repo + ref : ${{ github.event.pull_request.head.repo.full_name }} + ${{ github.event.pull_request.head.ref }}"
+#       - name: Run style-dictionary
+#         run: npx style-dictionary build --config sd.config.cjs
 
-      #   - uses: actions/checkout@master
-      #     with:
-      #       repository: ${{ github.event.pull_request.head.repo.full_name }}
-      #       ref: ${{ github.event.pull_request.head.ref }}
+#       - name: Commit changes
+#         run: |
+#           git config --local user.email "senno.adi2509@gmail.com"
+#           git config --local user.name "senno adi"
+#           git add .
+#           git commit -m "chore: style-dictionary output"
+#           git push origin main
 
-      - name: Install Dependencies
-        run: npm install
+#   - name: Create Pull Request
+#     uses: peter-evans/create-pull-request@v3
+#     with:
+#       token: ${{ secrets.GITHUB_TOKEN }}
+#       branch: main
+#       title: 'chore: style-dictionary output'
+#       body: 'Automated PR to update style-dictionary output'
 
-      - name: Run token-transformer
-        run: npx token-transformer sd-input/src/figma-tokens-output.json sd-input/src/sd-input.json global,colors,size,font global --resolveReferences true --expandTypography=true
-
-      - name: Run style-dictionary
-        run: npx style-dictionary build --config sd.config.cjs
-
-      - name: Commit changes
-        run: |
-          git config --local user.email "senno.adi2509@gmail.com"
-          git config --local user.name "senno adi"
-          git add .
-          git commit -m "chore: style-dictionary output"
-          git push origin main
-
-    #   - name: Create Pull Request
-    #     uses: peter-evans/create-pull-request@v3
-    #     with:
-    #       token: ${{ secrets.GITHUB_TOKEN }}
-    #       branch: main
-    #       title: 'chore: style-dictionary output'
-    #       body: 'Automated PR to update style-dictionary output'
-
-    #   - name: Commit changes
-    #     uses: EndBug/add-and-commit@v9
-    #     with:
-    #       author_name: senno adi
-    #       author_email: senno.adi2509@@gmail.com
-    #       message: 'chore: style-dictionary output'
-    #       add: '.'
+#   - name: Commit changes
+#     uses: EndBug/add-and-commit@v9
+#     with:
+#       author_name: senno adi
+#       author_email: senno.adi2509@@gmail.com
+#       message: 'chore: style-dictionary output'
+#       add: '.'
 
 #   create-tag:
 #     needs: convert-sd
